Added .pem file - DEV

--- a/script/config/ehallReverse.conf
+++ b/script/config/ehallReverse.conf
@@ -1,5 +1,9 @@
 server {
-  listen 80;
+  listen 443 http2 ssl;
+
+  ssl_certificate /etc/ssl/certs/ehall.crt;
+  ssl_certificate_key /etc/ssl/private/ehall.key;
+  ssl_dhparam /etc/ssl/certs/dhparam.pem;
 
   location / {
     proxy_buffering off;
