Added SSL to Nginx

--- a/script/config/ehallReverse.conf
+++ b/script/config/ehallReverse.conf
@@ -1,5 +1,6 @@
 server {
-  listen 443 http2 ssl;
+  listen 80; # Only for DEV
+  listen 443 ssl;
 
   ssl_certificate /etc/ssl/certs/ehall.crt;
   ssl_certificate_key /etc/ssl/private/ehall.key;
