--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.3
 Django==1.10.6
 djangorestframework==3.6.1
 drfapikey==0.0.3
+netifaces (0.10.5)
 Markdown==2.6.8
 packaging==16.8
 pyparsing==2.2.0
