--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==1.10.6
 django-cors-headers==2.0.2
 djangorestframework==3.6.1
 drfapikey==0.0.3
+netifaces (0.10.5)
 Markdown==2.6.8
 packaging==16.8
 pyparsing==2.2.0
